@@ -94,7 +94,7 @@ class FindAllRestaurantsUseCaseTest {
 
         var output = useCase.execute(new FindAllRestaurantsUseCase.Input(pageRequest));
 
-        var first = output.content().get(0);
+        var first = output.content().getFirst();
         assertThat(first.id()).isEqualTo(burgerRestaurant.getId());
         assertThat(first.name()).isEqualTo(burgerRestaurant.getName());
         assertThat(first.address()).isEqualTo(burgerRestaurant.getAddress());
@@ -201,7 +201,7 @@ class FindAllRestaurantsUseCaseTest {
         var output = useCase.execute(new FindAllRestaurantsUseCase.Input(pageRequest));
 
         assertThat(output.content()).hasSize(1);
-        assertThat(output.content().get(0).name().getValue()).isEqualTo("The Great Burger");
+        assertThat(output.content().getFirst().name().getValue()).isEqualTo("The Great Burger");
     }
 
     @Test
